--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "test": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -32,17 +30,13 @@
     "@angular-eslint/schematics": "16.2.0",
     "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "~16.2.3",
-    "@angular/compiler-cli": "^16.2.0",
-    "@types/jasmine": "~4.3.0",
+    "@angular/compiler-cli": "^16.2.0", 
+    "@types/jest": "^29.5.6",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "eslint": "^8.49.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "eslint": "^8.49.0", 
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^13.1.2",
     "typescript": "~5.1.3"
   }
 }
